@@ -3,5 +3,6 @@ import zope.i18nmessageid
 MessageFactory = zope.i18nmessageid.MessageFactory('collective.dancing')
 
 def initialize(context):
-    import patch
+    pass
+#path is now done with collective.monkeypatcher
 
